default/objects/Account_Relationship_Map__c/Account_Relationship_Map__c.object-meta.xml
<CustomObject>
    <label>Account Relationship Map</label>
    <nameField>
        <label>Account Relationship Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Relationship Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>