default/objects/Account_Relationship_Map__c/fields/Account_Map_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Account_Map_Member_Count__c</fullName>
    <label>Account_Map_Member_Count</label>
    <summaryForeignKey>Account_Map_Member__c.Account_Relationship_Map__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>