default/objects/Account_Relationship_Map__c/fields/Account_Map_Member_Max_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Map_Member_Max_Modified_Date__c</fullName>
    <label>Account Map Member Max Modified Date</label>
    <summarizedField>Account_Map_Member__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Account_Map_Member__c.Account_Relationship_Map__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>