default/objects/Account_Relationship_Map__c/fields/Account_Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan Id</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Account Relationship Maps</relationshipLabel>
    <relationshipName>Account_Relationship_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>