default/objects/Account_Relationship_Map__c/fields/Type_Setting__c.field-meta.xml
<CustomField>
    <fullName>Type_Setting__c</fullName>
    <label>Type Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>